--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "~4.13.4",
+    "express": "^4.17.1",
     "express-handlebars": "~3.0.0",
+    "mongodb": "^3.3.4",
+    "mongoose": "^5.7.5",
     "socket.io": "~1.4.5"
   }
 }
